2003-05-31  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v2.1.26.

        * Made the default templates a bit more XHTML compliant.  There
        are still some oddities left, though.

        * "{{{ }}}" now emit <span style="..."> when inlined.  This allows
        you to write inlined code that does not do any translation.
        Thanks to Lars Schmidt-Thieme.

        * Paragraph generation (the infamous <p> -tag) is now XHTML
        compatible.

        * A bunch of XHTML changes, thanks to an extremely high-quality
        patch from Lars Schmidt-Thieme.  A lot of the plugins and tags now
        work better.

        * v2.1.25.

        * CachingProvider now caches saved page modification dates
        correctly. 

        * CachingProvider can now also detect deleted pages, and signals
        PageManager correctly in this case.

2003-05-29  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v2.1.24.

        * CheckLockTag would sometimes throw a NullPointerException.
        Reported by Romeo Disca. 

2003-05-26  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v2.1.23.

        * out.png is now correctly transparent, thanks to Paul Downes.

        * CachingProvider can now detect if the page has been modified
        externally.

        * rss.jsp is now a part of the main distribution.  It is however,
        very weblog-specific right now, and shares a bit too much code
        with the RSSGenerator.

        * RSS generator now outputs the diffs as well, so you can see what
        actually changed and what did not.

2003-05-22  Janne Jalkanen  <Janne.Jalkanen@nospam.ecyrd.com>

        * v2.1.22.

        * RSS generator now also displays whether the file that was
        changed was a wikipage or an attachment.

        * Fixed attachment URL generation: RSSGenerator would generate
        faulty URLs, and practically no routine did URL encoding.  Oops.
        Reported by Stefan Riss. 
